2008-11-18  Josselin Mouette  <joss@malsain.org>

        Patch from Jeff Waugh <jeff.waugh@ubuntu.com>, credits for 
        diagnosing the issue go to Jan Schmidt.

	* esdlib.c: do not modify host passed to esd_sound_open, 
	because that is highly offensive. (Fixes GStreamer using 
	ESPEAKER.)

2008-11-18  Josselin Mouette  <joss@malsain.org>

	* esddsp.c: (mmap64): ship an implementation of mmap64.

2008-11-18  Josselin Mouette  <joss@malsain.org>

	* esd.c: (main): close the spawnfd when the startup is 
        successful.

2008-11-18  Josselin Mouette  <joss@malsain.org>

	* esd.c: (main): save a call to esd_audio_pause when run with 
	-nobeeps.

2008-11-18  Josselin Mouette  <joss@malsain.org>

	* esd.c: (main): allow the spawnfd to be 0, which is a valid 
          FD. Do never play beeps when esd has just been spawned.

2008-11-18  Josselin Mouette  <joss@malsain.org>

        Patches from Ryan Murray <rmurray@debian.org>

	* esd.c: (esd_connect_unix): prevent strncpy from writing a 
        non-NULL-terminated string.
	* esddsp.c: (dsp_init): same here.

2008-11-18  Josselin Mouette  <joss@malsain.org>

        Patch from Martin Pitt <martin.pitt@ubuntu.com>

	* audio_alsa09.c: Call snd_pcm_hw_free() before 
        snd_pcm_close(). This closes the file descriptor to the sound 
        device even if the device is not physically present any more.
        This fixes the esound/hotplug deadlock when removing a 
        currently active sound device.

2008-11-18  Josselin Mouette  <joss@malsain.org>

	* esdfilt.c: (main): add informative output to -double, similar 
          to that of -half.

2008-11-18  Josselin Mouette <joss@malsain.org>

	* esd-server.h: add missing sys/un.h header.

2008-11-18  Josselin Mouette  <joss@malsain.org>

	* proto.c: (esd_proto_stream_recorder): replace the 1 s sleeps, 
        which are here to work around a bug in the kernel, by 100 µs 
        ones, which will be enough.

2008-11-18  Josselin Mouette  <joss@malsain.org>
