@@ -1,5 +1,12 @@
 2008-11-18  Josselin Mouette  <joss@malsain.org>
 
+        Patch from Ryan Murray <rmurray@debian.org>
+
+	* esdlib.c: Remove libesddsp from LD_PRELOAD when autospawning 
+	esd.
+
+2008-11-18  Josselin Mouette  <joss@malsain.org>
+
         Patch from Jeff Waugh <jeff.waugh@ubuntu.com>, credits for 
         diagnosing the issue go to Jan Schmidt.
 
